[gd_scene load_steps=2 format=3 uid="uid://3mytbyuhtgmk"]

[ext_resource type="Script" path="res://scenes/user interface/ui.gd" id="1_udlvl"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_udlvl")

[node name="HighScore" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.5
offset_right = 50.5
offset_bottom = 40.0
grow_horizontal = 2

[node name="Label" type="Label" parent="HighScore"]
layout_mode = 2
text = "High Score:"

[node name="Score" type="Label" parent="HighScore"]
layout_mode = 2
text = "0"

[node name="Score" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 40.0
offset_right = 31.0
offset_bottom = 63.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Score"]
layout_mode = 2
text = "Score:"

[node name="Score" type="Label" parent="Score"]
layout_mode = 2
text = "0"

[node name="StartMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -11.5
offset_right = 130.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Chicken Little 2: Electric Boogaloo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 190.0
offset_right = 100.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"
icon_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
